# Ballast

./: .dockerignore  .gitignore  Dockerfile  PRD.md  README.md  TechSpec.md  UISpec.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: index.html
examples/: demo.py  langgraph_example.py
src/ballast/: __init__.py  _clock.py  backpressure.py  breaker.py  budget.py  chaos.py  config.py  eventlog.py  events.py  exceptions.py  fallback.py  interceptor.py  runtime.py
src/ballast/dashboard/: __init__.py  __main__.py  app.py  demo_swarm.py
src/ballast/dashboard/static/: index.html
tests/: conftest.py  test_async.py  test_backpressure.py  test_breaker.py  test_budget.py  test_chaos.py  test_dashboard.py  test_eventlog.py  test_fallback.py  test_interceptor.py  test_smoke.py
