[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ballast"
version = "0.1.0"
description = "Resilience and cost-control plane for multi-agent AI systems"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Surya" }]
keywords = ["agents", "resilience", "circuit-breaker", "backpressure", "chaos-engineering"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27"]
dashboard = ["fastapi>=0.110", "uvicorn>=0.29"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ballast = ["dashboard/static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
